--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 absl-py==0.9.0
+astetik==1.9.9
 astor==0.8.1
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.5
+boto==2.49.0
+boto3==1.13.19
+botocore==1.16.19
 cachetools==4.1.0
 certifi==2020.4.5.1
+chances==0.1.9
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+docutils==0.15.2
 entrypoints==0.3
 gast==0.2.2
+geonamescache==1.1.0
 google-auth==1.14.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
@@ -24,14 +31,18 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.0
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.14.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+keras-tqdm==2.0.1
+kerasplotlib==0.1.6
 kiwisolver==1.2.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
@@ -44,8 +55,10 @@ numpy==1.18.3
 oauthlib==3.1.0
 opt-einsum==3.2.1
 packaging==20.4
+pandas==1.0.4
 pandocfilters==1.4.2
 parso==0.7.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prometheus-client==0.7.1
@@ -58,18 +71,24 @@ Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
 pyzmq==19.0.0
 qtconsole==4.7.4
 QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+s3transfer==0.3.3
 scikit-learn==0.22.2.post1
 scipy==1.4.1
+seaborn==0.10.1
 Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
 smart-open==1.8.4
+statsmodels==0.11.1
+talos==1.0
 tensorboard==2.1.1
 tensorflow==2.1.0
 tensorflow-estimator==2.1.0
@@ -78,11 +97,13 @@ termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
+tqdm==4.46.0
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.1.9
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
+wrangle==0.6.7
 wrapt==1.12.1
 zipp==3.1.0
